--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 version: '3.8'
 
 services:
@@ -10,7 +9,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      DATABASE_URL: ${DATABASE_URL}
+      DATABASE_URL: postgresql://postgres:SIuRMOlquUxLWNCpUVmtqDhVHnQOsJuq@db:5432/railway
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
     depends_on:
       - db
@@ -20,8 +19,8 @@ services:
     restart: always
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: SIuRMOlquUxLWNCpUVmtqDhVHnQOsJuq
-      POSTGRES_DB: railway
+      POSTGRES_PASSWORD: 12345678
+      POSTGRES_DB: SaleMate
     ports:
       - '51327:5432'
     volumes:
