--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,30 @@
-version: '3.8'
+# version: '3.8'
 
-services:
-  app:
-    image: samuelalvian/salemate:team3
-    build: 
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
-    environment:
-      DATABASE_URL: postgresql://postgres:pkYBhndFhQhiKNXwqgDtkmiweJUNMUiL@viaduct.proxy.rlwy.net:27020/railway
-      JWT_SECRET_KEY: ${JWT_SECRET_KEY}
-    depends_on:
-      - db
+# services:
+#   app:
+#     image: samuelalvian/salemate:team3
+#     build: 
+#       context: .
+#       dockerfile: Dockerfile
+#     ports:
+#       - "3000:3000"
+#     environment:
+#       DATABASE_URL: postgresql://postgres:pkYBhndFhQhiKNXwqgDtkmiweJUNMUiL@viaduct.proxy.rlwy.net:27020/railway
+#       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
+#     depends_on:
+#       - db
 
-  db:
-    image: postgres:16
-    restart: always
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: pkYBhndFhQhiKNXwqgDtkmiweJUNMUiL
-      POSTGRES_DB: railway
-    ports:
-      - '5432:5432'
-    volumes:
-      - db_data:/var/lib/postgresql/data
+#   db:
+#     image: postgres:16
+#     restart: always
+#     environment:
+#       POSTGRES_USER: postgres
+#       POSTGRES_PASSWORD: pkYBhndFhQhiKNXwqgDtkmiweJUNMUiL
+#       POSTGRES_DB: railway
+#     ports:
+#       - '5432:5432'
+#     volumes:
+#       - db_data:/var/lib/postgresql/data
 
-volumes:
-  db_data:
+# volumes:
+#   db_data:
