--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
         {
             "src": "/(.*)",
             "dest": "dist/main.ts",
-            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
+            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
         }
     ]
 } 
